generated/nixidy/prod/mealie/HTTPRoute-mealie.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: mealie
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: mealie
  name: mealie
  namespace: dotfiles
spec:
  hostnames:
    - mealie.trdos.me
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: mealie
          namespace: dotfiles
          port: 9000
          weight: 1
